--- a/teacher.html
+++ b/teacher.html
@@ -39,44 +39,46 @@
   }
 
   // 3️⃣ Fetch classes for teacher’s school
-  const { data: classes, error } = await supabase
-    .from("classes")
-    .select(`
+
+
+
+// 3️⃣ Fetch only classes assigned to this teacher for the current year
+const { data: assignedClasses, error: assignedError } = await supabase
+  .from("teacher_subjects")
+  .select(`
+    class_id,
+    classes (
       id,
       name,
       academic_year,
       grades ( grade_number )
-    `)
-    .eq("school_id", profile.school_id);
+    )
+  `)
+  .eq("teacher_id", profile.id)
+  .eq("classes.academic_year", CURRENT_YEAR);
 
-  if (error) {
-    classListEl.innerText = "Failed to load classes";
-    throw error;
-  }
+if (assignedError) {
+  classListEl.innerText = "Failed to load assigned classes";
+  throw assignedError;
+}
 
-  // ✅ FILTER TO CURRENT YEAR ONLY
-  const filteredClasses = (classes || []).filter(
-    c => Number(c.academic_year) === CURRENT_YEAR
-  );
-
-  // 4️⃣ Render results
-  if (filteredClasses.length === 0) {
-    classListEl.innerText = `No classes found for ${CURRENT_YEAR}`;
-  } else {
-    classListEl.innerHTML = filteredClasses.map(c => `
-      <div
-        style="border:1px solid #ccc; padding:10px; margin-bottom:10px;"
-        data-year="${c.academic_year}"
-      >
+if (!assignedClasses || assignedClasses.length === 0) {
+  classListEl.innerText = `No classes assigned for ${CURRENT_YEAR}`;
+} else {
+  classListEl.innerHTML = assignedClasses.map(row => {
+    const c = row.classes;
+    return `
+      <div style="border:1px solid #ccc; padding:10px; margin-bottom:10px;" data-year="${c.academic_year}">
         <strong>${c.name}</strong><br>
         Grade: ${c.grades.grade_number}<br>
         Academic Year: ${c.academic_year}<br>
-        <button data-class="${c.id}">
-          Start Assessment
-        </button>
+        <button data-class="${c.id}">Start Assessment</button>
       </div>
-    `).join("");
-  }
+    `;
+  }).join("");
+}
+
+  
 
   // 5️⃣ Button handler (safe binding)
   classListEl.addEventListener("click", (e) => {
