--- a/teacher.html
+++ b/teacher.html
@@ -9,40 +9,34 @@
   <div id="classList">Loading classes...</div>
 
 <script type="module">
-  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
-  const supabase = createClient(
-    "https://zcmzuetusvpmvubbjlmx.supabase.co",
-    "sb_publishable_-BGJLAySaH7bQ5lBIZF9zg_eohK-xEn"
-  );
+const supabase = createClient(
+  "https://zcmzuetusvpmvubbjlmx.supabase.co",
+  "sb_publishable_-BGJLAySaH7bQ5lBIZF9zg_eohK-xEn"
+);
 
-  const classListEl = document.getElementById("classList");
+const classListEl = document.getElementById("classList");
+const CURRENT_YEAR = 2026; // 🔒 Lock current academic year
 
-  // 🔒 LOCK CURRENT ACADEMIC YEAR
-  const CURRENT_YEAR = 2026;
+// 1️⃣ Get logged-in user
+const { data: { user }, error: userError } = await supabase.auth.getUser();
+if (!user || userError) {
+  window.location.href = "index.html";
+}
 
-  // 1️⃣ Get logged-in user
-  const { data: { user } } = await supabase.auth.getUser();
-  if (!user) {
-    window.location.href = "index.html";
-  }
+// 2️⃣ Get teacher profile (including id!)
+const { data: profile, error: profileError } = await supabase
+  .from("profiles")
+  .select("id, role, school_id")
+  .eq("auth_id", user.id)
+  .single();
 
-  // 2️⃣ Get profile (role + school)
-  const { data: profile, error: profileError } = await supabase
-    .from("profiles")
-    .select("role, school_id")
-    .eq("auth_id", user.id)
-    .single();
+if (profileError || !profile || profile.role !== "teacher") {
+  window.location.href = "index.html";
+}
 
-  if (profileError || !profile || profile.role !== "teacher") {
-    window.location.href = "index.html";
-  }
-
-  // 3️⃣ Fetch classes for teacher’s school
-
-
-
-// 3️⃣ Fetch only classes assigned to this teacher for the current year
+// 3️⃣ Fetch classes assigned to this teacher for the current year
 const { data: assignedClasses, error: assignedError } = await supabase
   .from("teacher_subjects")
   .select(`
@@ -62,6 +56,7 @@ if (assignedError) {
   throw assignedError;
 }
 
+// 4️⃣ Render results
 if (!assignedClasses || assignedClasses.length === 0) {
   classListEl.innerText = `No classes assigned for ${CURRENT_YEAR}`;
 } else {
@@ -78,29 +73,25 @@ if (!assignedClasses || assignedClasses.length === 0) {
   }).join("");
 }
 
-  
+// 5️⃣ Button handler
+classListEl.addEventListener("click", (e) => {
+  if (e.target.tagName !== "BUTTON") return;
 
-  // 5️⃣ Button handler (safe binding)
-  classListEl.addEventListener("click", (e) => {
-    if (e.target.tagName !== "BUTTON") return;
+  const card = e.target.closest("div");
+  const classId = e.target.getAttribute("data-class");
+  const academicYear = card.getAttribute("data-year");
 
-    const card = e.target.closest("div");
-    const classId = e.target.getAttribute("data-class");
-    const academicYear = card.getAttribute("data-year");
+  if (!academicYear) {
+    alert("Academic year missing for this class. Contact admin.");
+    return;
+  }
 
-    // 🛑 SAFETY GUARD
-    if (!academicYear) {
-      alert("Academic year missing for this class. Contact admin.");
-      return;
-    }
+  localStorage.setItem("class_id", classId);
+  localStorage.setItem("academic_year", academicYear);
 
-    localStorage.setItem("class_id", classId);
-    localStorage.setItem("academic_year", academicYear);
-
-    window.location.href = "assessment-students.html";
-  });
+  window.location.href = "assessment-students.html";
+});
 </script>
-
 
 </body>
 </html>
