--- a/teacher.html
+++ b/teacher.html
@@ -9,88 +9,93 @@
   <div id="classList">Loading classes...</div>
 
 <script type="module">
-import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
-const supabase = createClient(
-  "https://zcmzuetusvpmvubbjlmx.supabase.co",
-  "sb_publishable_-BGJLAySaH7bQ5lBIZF9zg_eohK-xEn"
-);
+  const supabase = createClient(
+    "https://zcmzuetusvpmvubbjlmx.supabase.co",
+    "sb_publishable_-BGJLAySaH7bQ5lBIZF9zg_eohK-xEn"
+  );
 
-const classListEl = document.getElementById("classList");
-const CURRENT_YEAR = 2026; // 🔒 Lock current academic year
+  const classListEl = document.getElementById("classList");
 
-// 1️⃣ Get logged-in user
-const { data: { user }, error: userError } = await supabase.auth.getUser();
-if (!user || userError) {
-  window.location.href = "index.html";
-}
+  // 🔒 LOCK CURRENT ACADEMIC YEAR
+  const CURRENT_YEAR = 2026;
 
-// 2️⃣ Get teacher profile (including id!)
-const { data: profile, error: profileError } = await supabase
-  .from("profiles")
-  .select("id, role, school_id")
-  .eq("auth_id", user.id)
-  .single();
-
-if (profileError || !profile || profile.role !== "teacher") {
-  window.location.href = "index.html";
-}
-
-// 3️⃣ Fetch classes assigned to this teacher for the current year
-const { data: assignedClasses, error: assignedError } = await supabase
-  .from("teacher_subjects")
-  .select(`
-    class_id,
-    classes (
-      id,
-      name,
-      academic_year,
-      grades ( grade_number )
-    )
-  `)
-  .eq("teacher_id", profile.id)
-  .eq("classes.academic_year", CURRENT_YEAR);
-
-if (assignedError) {
-  classListEl.innerText = "Failed to load assigned classes";
-  throw assignedError;
-}
-
-// 4️⃣ Render results
-if (!assignedClasses || assignedClasses.length === 0) {
-  classListEl.innerText = `No classes assigned for ${CURRENT_YEAR}`;
-} else {
-  classListEl.innerHTML = assignedClasses.map(row => {
-    const c = row.classes;
-    return `
-      <div style="border:1px solid #ccc; padding:10px; margin-bottom:10px;" data-year="${c.academic_year}">
-        <strong>${c.name}</strong><br>
-        Grade: ${c.grades.grade_number}<br>
-        Academic Year: ${c.academic_year}<br>
-        <button data-class="${c.id}">Start Assessment</button>
-      </div>
-    `;
-  }).join("");
-}
-
-// 5️⃣ Button handler
-classListEl.addEventListener("click", (e) => {
-  if (e.target.tagName !== "BUTTON") return;
-
-  const card = e.target.closest("div");
-  const classId = e.target.getAttribute("data-class");
-  const academicYear = card.getAttribute("data-year");
-
-  if (!academicYear) {
-    alert("Academic year missing for this class. Contact admin.");
-    return;
+  // 1️⃣ Get logged-in user
+  const { data: { user } } = await supabase.auth.getUser();
+  if (!user) {
+    window.location.href = "index.html";
   }
 
-  localStorage.setItem("class_id", classId);
-  localStorage.setItem("academic_year", academicYear);
+  // 2️⃣ Get profile (role + school)
+  const { data: profile, error: profileError } = await supabase
+    .from("profiles")
+    .select("id, role, school_id")
+    .eq("auth_id", user.id)
+    .single();
 
-  window.location.href = "assessment-students.html";
-});
+  if (profileError || !profile || profile.role !== "teacher") {
+    window.location.href = "index.html";
+  }
+
+  // 3️⃣ Fetch only classes assigned to this teacher for the current year
+  const { data: assignedClasses, error: assignedError } = await supabase
+    .from("teacher_subjects")
+    .select(`
+      class_id,
+      classes (
+        id,
+        name,
+        academic_year,
+        grades ( grade_number )
+      )
+    `)
+    .eq("teacher_id", profile.id)
+    .eq("classes.academic_year", CURRENT_YEAR);
+
+  if (assignedError) {
+    classListEl.innerText = "Failed to load assigned classes";
+    throw assignedError;
+  }
+
+  // ✅ Filter out any null/missing classes
+  const validClasses = (assignedClasses || []).filter(row => row.classes);
+
+  // 4️⃣ Render results
+  if (validClasses.length === 0) {
+    classListEl.innerText = `No classes assigned for ${CURRENT_YEAR}`;
+  } else {
+    classListEl.innerHTML = validClasses.map(row => {
+      const c = row.classes;
+      return `
+        <div style="border:1px solid #ccc; padding:10px; margin-bottom:10px;" data-year="${c.academic_year || 'N/A'}">
+          <strong>${c.name || 'Unnamed Class'}</strong><br>
+          Grade: ${c.grades ? c.grades.grade_number : 'N/A'}<br>
+          Academic Year: ${c.academic_year || 'N/A'}<br>
+          <button data-class="${c.id}">Start Assessment</button>
+        </div>
+      `;
+    }).join("");
+  }
+
+  // 5️⃣ Button handler (safe binding)
+  classListEl.addEventListener("click", (e) => {
+    if (e.target.tagName !== "BUTTON") return;
+
+    const card = e.target.closest("div");
+    const classId = e.target.getAttribute("data-class");
+    const academicYear = card.getAttribute("data-year");
+
+    if (!academicYear) {
+      alert("Academic year missing for this class. Contact admin.");
+      return;
+    }
+
+    localStorage.setItem("class_id", classId);
+    localStorage.setItem("academic_year", academicYear);
+
+    window.location.href = "assessment-students.html";
+  });
 </script>
 
 </body>
